GNU bug report logs - #19027
bytevector-fill! reject fill arguments larger than 127

Previous Next

Package: guile;

Reported by: Mark H Weaver <mhw <at> netris.org>

Date: Wed, 12 Nov 2014 04:52:02 UTC

Severity: normal

Done: Mark H Weaver <mhw <at> netris.org>

Bug is archived. No further changes may be made.

To add a comment to this bug, you must first unarchive it, by sending
a message to control AT debbugs.gnu.org, with unarchive 19027 in the body.
You can then email your comments to 19027 AT debbugs.gnu.org in the normal way.

Toggle the display of automated, internal messages from the tracker.

View this report as an mbox folder, status mbox, maintainer mbox


Report forwarded to bug-guile <at> gnu.org:
bug#19027; Package guile. (Wed, 12 Nov 2014 04:52:02 GMT) Full text and rfc822 format available.

Acknowledgement sent to Mark H Weaver <mhw <at> netris.org>:
New bug report received and forwarded. Copy sent to bug-guile <at> gnu.org. (Wed, 12 Nov 2014 04:52:02 GMT) Full text and rfc822 format available.

Message #5 received at submit <at> debbugs.gnu.org (full text, mbox):

From: Mark H Weaver <mhw <at> netris.org>
To: bug-guile <at> gnu.org
Subject: bytevector-fill! reject fill arguments larger than 127
Date: Tue, 11 Nov 2014 23:51:20 -0500
See the following session with Guile 2.0.11:

--8<---------------cut here---------------start------------->8---
scheme@(guile-user)> ,use (rnrs bytevectors)
scheme@(guile-user)> (define bv (make-bytevector 8))
scheme@(guile-user)> (bytevector-fill! bv 255)
ERROR: In procedure bytevector-fill!:
ERROR: Value out of range -128 to 127: 255
--8<---------------cut here---------------end--------------->8---

I will fix this soon.

     Mark




Reply sent to Mark H Weaver <mhw <at> netris.org>:
You have taken responsibility. (Wed, 12 Nov 2014 05:56:01 GMT) Full text and rfc822 format available.

Notification sent to Mark H Weaver <mhw <at> netris.org>:
bug acknowledged by developer. (Wed, 12 Nov 2014 05:56:02 GMT) Full text and rfc822 format available.

Message #10 received at 19027-done <at> debbugs.gnu.org (full text, mbox):

From: Mark H Weaver <mhw <at> netris.org>
To: 19027-done <at> debbugs.gnu.org
Subject: Re: bug#19027: bytevector-fill! reject fill arguments larger than 127
Date: Wed, 12 Nov 2014 00:53:32 -0500
Fixed in ae6f77ddfaf8e752589d9050c9e517cb1c52cbf0 on the stable-2.0
branch.

     Mark




bug archived. Request was from Debbugs Internal Request <help-debbugs <at> gnu.org> to internal_control <at> debbugs.gnu.org. (Wed, 10 Dec 2014 12:24:04 GMT) Full text and rfc822 format available.

This bug report was last modified 9 years and 139 days ago.

Previous Next


GNU bug tracking system
Copyright (C) 1999 Darren O. Benham, 1997,2003 nCipher Corporation Ltd, 1994-97 Ian Jackson.